overflow x fixed

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 html {
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 .logo img {
